add picture and hi message typed.js

--- a/cv/src/app/home/home.component.html
+++ b/cv/src/app/home/home.component.html
@@ -3,5 +3,5 @@
 </div>
 <div class="introduction-container">
   <h1>Hi, I'm Ilyes</h1>
-  <span class="introduction-phrase">I'm a human being, husband, father, believer, dreamer.. Oh and a developer :)</span>
+  <span class="introduction-phrase"></span>
 </div>
