--- a/cv/src/app/section/section.component.scss
+++ b/cv/src/app/section/section.component.scss
@@ -28,7 +28,8 @@
     background-size: cover;
     height: 100vh;
     position: relative;
+    padding: 0px;
     .section {
-        padding: 10%;
+        padding: 20%;
     }
 }
