--- a/cv/src/app/menu/menu.component.scss
+++ b/cv/src/app/menu/menu.component.scss
@@ -23,6 +23,7 @@
             font-family: "Lato", sans-serif;
             font-size: 13px;
             font-weight: 700;
+            cursor: pointer;
         }
     }
 }
