--- a/cv/src/styles.scss
+++ b/cv/src/styles.scss
@@ -2,3 +2,7 @@
 .bg-color-medium { background-color: rgb(250, 250, 250); }
 .bg-color-light { background-color: rgb(255, 255, 255); }
 body { margin: 0px; font-family: "Lato", sans-serif; }
+.typed-cursor {
+    font-size: 26px;
+    color: rgb(191, 191, 191);
+}
