--- a/cv/src/app/menu/menu.component.scss
+++ b/cv/src/app/menu/menu.component.scss
@@ -23,5 +23,9 @@
             font-weight: 700;
             cursor: pointer;
         }
+
+        .logo-container {
+            width: 100px;
+        }
     }
 }
