--- a/cv/src/app/menu/menu.component.html
+++ b/cv/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div [@animateStickyMenu]="menuState" class="menu-container">
     <div [@animateColorMenu]="menuState" class="menu-grid-container">
-        <div class="logo-container">logo</div>
+        <div class="logo-container"><img src="../../assets/logo.svg"></div>
         <div *ngFor="let menuItem of menu.items">
           <a appSmoothScrolling name="{{menuItem.label}}" class="menu-item" >{{ menuItem.label.toUpperCase() }}</a>
         </div>
