add section about

--- a/cv/src/app/app.component.html
+++ b/cv/src/app/app.component.html
@@ -2,11 +2,11 @@
 <div class="app">
   <app-menu></app-menu>
   <app-section id="Home" [sectionType]="'Home'" [backgroundColorClass]="'bg-color-light'"></app-section>
-  <app-section id="About" [backgroundColorClass]="'bg-color-light'"></app-section>
-  <app-section id="Services" [backgroundColorClass]="'bg-color-medium'"></app-section>
-  <app-section id="Work" [backgroundColorClass]="'bg-color-light'"></app-section>
-  <app-section id="Clients" [backgroundColorClass]="'bg-color-medium'"></app-section>
-  <app-section id="Contact" [backgroundColorClass]="'bg-color-light'"></app-section>
+  <app-section id="About" [sectionType]="'About'" [backgroundColorClass]="'bg-color-light'"></app-section>
+  <app-section id="Services" [sectionType]="'Services'" [backgroundColorClass]="'bg-color-medium'"></app-section>
+  <app-section id="Work" [sectionType]="'Work'" [backgroundColorClass]="'bg-color-light'"></app-section>
+  <app-section id="Clients" [sectionType]="'Clients'" [backgroundColorClass]="'bg-color-medium'"></app-section>
+  <app-section id="Contact" [sectionType]="'Contact'" [backgroundColorClass]="'bg-color-light'"></app-section>
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
