--- a/cv/src/app/about/about.component.html
+++ b/cv/src/app/about/about.component.html
@@ -10,14 +10,10 @@
     </div>
   </div>
   <div class="box">
-      <h3 class="section-subtitle">Hi There! I'm Ilyes Ait Hamouda</h3>
-      <p class="description">I'm a professional developer from Montréal, Canada. I create beautiful professional websites using best practice accessibility. I enjoy turning complex problems into simple, beautiful and intuitive interface designs. </p>
-      <div class="flex-box-container">
-        <div class="flex-box">Email : iliesaithamouda@gmail.com</div>
-        <div class="flex-box">Location : H1E, Montréal, CA.</div>
-        <div class="flex-box">Date of birth : 8 November 1988</div>
-        <div class="flex-box">Phone : +1-514-475-4146</div>
-      </div>
+      <app-progressive-bar [title]="'Angular'" [progress]="75"></app-progressive-bar>
+      <app-progressive-bar [title]="'AEM'" [progress]="60"></app-progressive-bar>
+      <app-progressive-bar [title]="'Java'" [progress]="85"></app-progressive-bar>
+      <app-progressive-bar [title]="'React'" [progress]="10"></app-progressive-bar>
   </div>
   
 </div>
