--- a/cv/src/app/progressive-bar/progressive-bar.component.scss
+++ b/cv/src/app/progressive-bar/progressive-bar.component.scss
@@ -4,8 +4,11 @@
     grid-gap: 20px;
     grid-template-columns: 75% 1fr;// repeat(auto-fill,minmax(500px, 1fr));
     text-align: left;
-    padding: 20px;
-    max-width: 500px;
+    padding: 25px 0px 15px 0px;
+    max-width: 95%;
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
     & > * {
         display: flex;
         flex-direction: column;
