--- a/cv/src/styles.scss
+++ b/cv/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 .bg-color-medium { background-color: rgb(250, 250, 250); }
 .bg-color-light { background-color: rgb(255, 255, 255); }
-body { margin: 0px; font-family: "Lato", sans-serif; }
+body { margin: 0px; font-family: "Lato", sans-serif; color: #484848;}
 .typed-cursor {
     font-size: 26px;
     color: rgb(191, 191, 191);
