--- a/cv/src/app/about/about.component.scss
+++ b/cv/src/app/about/about.component.scss
@@ -2,7 +2,7 @@
     // border: 1px solid black;
     display: grid;
     grid-gap: 40px;
-    grid-template-columns: repeat(auto-fit, minmax(330px, 48%));// repeat(auto-fill,minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     text-align: left;
     padding: 20px;
     .box {
@@ -25,13 +25,45 @@
         .flex-box-container {
             display: grid;
             grid-gap: 10px;
-            grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
+            grid-row-gap: 20px;
 
             .flex-box {
                 display: flex;
                 flex-direction: column;
+                justify-self: left;
+            }
+
+            .media-icons {
+                font-size: 20px;
+                border: 1px solid black;
+                width: 18px;
+                text-align: center;
+                padding: 10px;
+                border-radius: 24px;
+            }
+
+            .media-icons:hover {
+                background-color: #484848;
+                color: white;
             }
         }
+
+        .grid-container-min-1-fr {
+            grid-template-columns: repeat(auto-fit,minmax(30px, 40px));
+            margin-top: 20px;
+        }
+
+        
     }
   }
+
+    a {
+        color: #666;
+        text-decoration: none;
+    }
+    a:hover {
+        color: #484848;
+        text-decoration: none;
+    }
   
