--- a/cv/src/app/section/section.component.html
+++ b/cv/src/app/section/section.component.html
@@ -1,8 +1,11 @@
 <div scrollableBackgroundImage class="section-container {{backgroundColorClass}}" [ngClass]="{'background-pic-m low-opacity' : sectionType === 'Home'}">
   <div *ngIf="sectionType === 'Home'" class="overlay-shadow"></div>
   <div class="section">
-    <app-home *ngIf="sectionType === 'Home'"></app-home>
-    <app-about *ngIf="sectionType === 'About'"></app-about>
+    <app-home       *ngIf="sectionType === 'Home'"></app-home>
+    <app-about      *ngIf="sectionType === 'About'"></app-about>
+    <app-portfolio  *ngIf="sectionType === 'Services'" [layoutType]="sectionType"></app-portfolio>
+    <app-portfolio  *ngIf="sectionType === 'Work'" [layoutType]="sectionType"></app-portfolio>
+
     <!-- <ng-template [ngIf]="sectionType !== 'Home'">
         <h1>
             I'm a developer
