--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,19 +5,9 @@
   <app-section id="About" [sectionType]="'About'" [backgroundColorClass]="'bg-color-light'"></app-section>
   <app-section id="Services" [sectionType]="'Services'" [backgroundColorClass]="'bg-color-medium'"></app-section>
   <app-section id="Work" [sectionType]="'Work'" [backgroundColorClass]="'bg-color-light'"></app-section>
-  <app-section id="Clients" [sectionType]="'Clients'" [backgroundColorClass]="'bg-color-medium'"></app-section>
+  <app-section id="Posts" [sectionType]="'Posts'" [backgroundColorClass]="'bg-color-medium'"></app-section>
   <app-section id="Contact" [sectionType]="'Contact'" [backgroundColorClass]="'bg-color-light'"></app-section>
+  <app-footer></app-footer>
+  <app-scroll-top-button></app-scroll-top-button>
 </div>
-<h2>Here are some links to help you start: </h2>
-<ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
-  <li>
-      <h2><a target="_blank" rel="noopener" href="https://angular.io/cli">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
-  </li>
-</ul>
 
