--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
     <div [@animateColorMenu]="menuState" class="menu-grid-container">
         <div class="logo-container"><img src="../../assets/logo.svg"></div>
         <div *ngFor="let menuItem of menu.items">
-          <a appSmoothScrolling name="{{menuItem.label}}" class="menu-item" >{{ menuItem.label.toUpperCase() }}</a>
+          <span appSmoothScrolling attr.data-target-link="{{menuItem.label}}" class="menu-item" >{{ menuItem.label.toUpperCase() }}</span>
         </div>
       </div>
 </div>
