--- a/src/app/scroll-top-button/scroll-top-button.component.html
+++ b/src/app/scroll-top-button/scroll-top-button.component.html
@@ -1,3 +1,3 @@
-<div id="scrollTopButton" appSmoothScrolling data-target-link="Home" class="scroll-top-container effect show-scroll-top-button">
+<div id="scrollTopButton" appSmoothScrolling data-target-link="Home" class="scroll-top-container effect">
     <i class="fa fa-angle-up"></i>
 </div>
