--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,36 +3,46 @@
       <h2>Contact me</h2>
     </div>
     <div class="grid-container contact-icons">
-        <div class="box contact-form-container">
+      <div class="box contact-form-container">
+        <div class="circle-wrapper">
+            <i class="fas fa-envelope"></i>
+        </div>
+        <div class="label-wrapper">Email</div>
+        <div class="text-wrapper">iliesaithamouda@outlook.com</div>
+      </div>
+      <div class="box contact-form-container">
           <div class="circle-wrapper">
               <i class="fas fa-envelope"></i>
           </div>
-          <div class="label-wrapper">Email</div>
-          <div class="text-wrapper">iliesaithamouda@outlook.com</div>
-        </div>
-        <div class="box contact-form-container">
-            <div class="circle-wrapper">
-                <i class="fas fa-envelope"></i>
-            </div>
-            <div class="label-wrapper">Phone number</div>
-            <div class="text-wrapper">+1 514-475-4146</div>
-        </div>
-    
+          <div class="label-wrapper">Phone number</div>
+          <div class="text-wrapper">+1 514-475-4146</div>
       </div>
+  
+    </div>
+    <div [formGroup]="contactForm" (ngSubmit)="submitForm()" class="form-group">
       <div class="grid-container contact-form">
         <div class="box contact-form-container">
-          <input name="name" type="text" placeholder="Name" />
+          <input name="name" formControlName="name" type="text" placeholder="Name" />
+          <div *ngIf="contactF.name.errors" class="invalid-feedback">
+              <div *ngIf="contactF.name.errors.required">Name is required</div>
+          </div>
         </div>
         <div class="box contact-form-container">
-          <input name="email" type="text" placeholder="Email" />
+          <input name="email" formControlName="email" type="text" placeholder="Email" />
+          <div *ngIf="contactF.email.errors" class="invalid-feedback">
+              <div *ngIf="contactF.email.errors.required">Email is required</div>
+          </div>
         </div>
       </div>
       <div class="text-area-container">
-        <textarea name="message" placeholder="Message"></textarea>
+        <textarea formControlName="message" name="message" placeholder="Message"></textarea>
+        <div *ngIf="contactF.message.errors" class="invalid-feedback">
+            <div *ngIf="contactF.message.errors.required">Message is required</div>
+        </div>
       </div>
       <div>
         <button class="send-button" type="submit">Send Message</button>
       </div>
-
+    </div>
 </div>
 
