--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div [@animateStickyMenu]="menuState" class="menu-container">
     <div [@animateColorMenu]="menuState" class="menu-grid-container">
-        <div class="logo-container"><img src="../../assets/logo.svg"></div>
+        <div class="logo-container"><img src="./assets/logo.svg"></div>
         <div *ngFor="let menuItem of menu.items">
           <span appSmoothScrolling attr.data-target-link="{{menuItem.label}}" class="menu-item" >{{ menuItem.label.toUpperCase() }}</span>
         </div>
