--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,10 @@
-<div [@animateStickyMenu]="menuState" class="menu-container">
-    <div [@animateColorMenu]="menuState" class="menu-grid-container">
-        <div class="logo-container"><img src="./assets/logo.svg"></div>
-        <div *ngFor="let menuItem of menu.items">
-          <span appSmoothScrolling attr.data-target-link="{{menuItem.label}}" class="menu-item" >{{ menuItem.label.toUpperCase() }}</span>
-        </div>
-      </div>
-</div>
+<header [@animateStickyMenu]="menuState" class="menu-container">
+  <nav [@animateColorMenu]="menuState" class="menu-grid-container">
+    <div class="logo-container"><img src="./assets/logo.svg"></div>
+    <div class="ham-menu"><i class="fas fa-bars"></i></div>
+    <div class="menu-item-container" *ngFor="let menuItem of menu.items">
+      <span appSmoothScrolling attr.data-target-link="{{menuItem.label}}" class="menu-item" >{{ menuItem.label.toUpperCase() }}</span>
+    </div>
+  </nav>
+</header>
 
