--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -6,26 +6,72 @@
         max-width: 1170px;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: 50% 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(1, minmax(20%, 50%)) repeat(6, minmax(80px, 1fr)); // 5fr 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: 50px;
-        grid-gap: 10px;
+        grid-column-gap: 10px;
         color: #FFFFFF;
-        
          
-        & div {
+        & .menu-item-container {
             align-items: center;
-            display: flex;
+            display: grid;
+            justify-items: center;
         }
-
         .menu-item {
             font-family: "Lato", sans-serif;
             font-size: 13px;
             font-weight: 700;
             cursor: pointer;
+            
+
         }
 
         .logo-container {
             width: 100px;
+
+            & img {
+                width: inherit;
+                top: -35px;
+                position: absolute;
+            }
+        }
+    }
+
+    .menu-item-container:last-child {
+        margin-right: 20px;
+    }
+
+    
+
+    // desktop
+    @media only screen and (min-width: 390px) {
+        .ham-menu {
+            display: none;
+        }
+        .menu-item-container {
+            display: flex;
+        }
+    }
+}
+
+// mobile and tablet
+@media only screen and (max-width: 390px) {
+    .menu-container {
+        padding-top: 0px !important;
+    
+        .menu-grid-container {
+            grid-template-columns: 3fr .5fr;
+            .ham-menu {
+                display: grid;
+                align-items: center;
+                justify-items: center;
+                font-size: 30px;
+            }
+            .menu-item-container {
+                display: none;
+            }
+            .logo-container {
+                width: 100px;
+            }
         }
     }
 }
