--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -16,14 +16,6 @@
             display: grid;
             justify-items: center;
         }
-        .menu-item {
-            font-family: "Lato", sans-serif;
-            font-size: 13px;
-            font-weight: 700;
-            cursor: pointer;
-            
-
-        }
 
         .logo-container {
             width: 100px;
@@ -34,6 +26,13 @@
                 position: absolute;
             }
         }
+    }
+
+    .menu-item {
+        font-family: "Lato", sans-serif;
+        font-size: 13px;
+        font-weight: 700;
+        cursor: pointer;
     }
 
     .menu-item-container:last-child {
@@ -50,21 +49,27 @@
         .menu-item-container {
             display: flex;
         }
+        .menu-items-mobile {
+            display: none;
+        }
     }
 }
 
 // mobile and tablet
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 700px) {
     .menu-container {
         padding-top: 0px !important;
     
         .menu-grid-container {
             grid-template-columns: 3fr .5fr;
+            justify-items: center;
+            padding-left: 70px;
             .ham-menu {
                 display: grid;
                 align-items: center;
                 justify-items: center;
                 font-size: 30px;
+                cursor: pointer;
             }
             .menu-item-container {
                 display: none;
@@ -72,6 +77,23 @@
             .logo-container {
                 width: 100px;
             }
+        }
+        .menu-items-mobile {
+            overflow: hidden;
+            display: block;
+            // border-top: 1px solid #f0f0f0;
+            &.hidden {
+                height: 0px;
+                transition: .5s height ease-in-out;
+            }
+            &.block {
+                height: 220px;
+                transition: .5s height ease-in-out;
+            }
+        }
+
+        .menu-item-container-mobile {
+            padding: 10px 20px;
         }
     }
 }
