--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,13 @@
 <div class="footer-container" >
-  this is a footer
+  <div class="footer-title">
+    Ilyes
+  </div>
+  <div class="social-media-links">
+    <span class="icone"><i class="fab fa-linkedin-in"></i></span>
+    <span class="icone"><i class="fab fa-medium-m"></i></span>
+    
+  </div>
+  <div class="copyrights">
+    Ilies ait hamouda © 2018. all right reserved.
+  </div>
 </div>
