--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -37,7 +37,7 @@
             .media-icons {
                 font-size: 20px;
                 border: 1px solid black;
-                width: 18px;
+                width: 24px;
                 text-align: center;
                 padding: 10px;
                 border-radius: 24px;
@@ -59,11 +59,11 @@
 }
 
     a {
-        color: #666;
+        color: #484848;
         text-decoration: none;
     }
     a:hover {
-        color: #484848;
+        color: #FFF;
         text-decoration: none;
     }
   
