--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,8 +3,8 @@
     Ilyes
   </div>
   <div class="social-media-links">
-    <span class="icone"><i class="fab fa-linkedin-in"></i></span>
-    <span class="icone"><i class="fab fa-medium-m"></i></span>
+    <a class="icone" href="https://www.linkedin.com/in/iliesaithamouda" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    <a class="icone" href="https://medium.com/@iliesaithamouda" target="_blank"><i class="fab fa-medium-m"></i></a>
     
   </div>
   <div class="copyrights">
