--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -2,6 +2,7 @@
 .portfolio-container {
     .title-container {
         color: #333;
+        padding-bottom: 40px;
         & h2 {
             position: relative;
             font-weight: 700;
