--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -6,7 +6,7 @@
     .section {
         max-width: 1170px;
         margin: 0 auto;
-        padding-top: 40px;
+        // padding-top: 40px;
         position: relative;
         z-index: 1;
         text-align: center;
