--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,14 +8,14 @@
             <i class="fas fa-envelope"></i>
         </div>
         <div class="label-wrapper">Email</div>
-        <div class="text-wrapper">iliesaithamouda@outlook.com</div>
+        <div class="text-wrapper"><a class="effect" href="mailto:iliesaithamouda@gmail.com">iliesaithamouda@outlook.com</a></div>
       </div>
       <div class="box box-glue contact-form-container">
           <div class="circle-wrapper">
               <i class="fas fa-envelope"></i>
           </div>
           <div class="label-wrapper">Phone number</div>
-          <div class="text-wrapper">+1 514-475-4146</div>
+          <div class="text-wrapper"><a class="effect" href="tel:15144754146">+1 514-475-4146</a></div>
       </div>
   
     </div>
