--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -8,5 +8,6 @@
     <app-posts      *ngIf="sectionType === 'Posts'"></app-posts>
     <app-contact    *ngIf="sectionType === 'Contact'"></app-contact>
   </div>
+  <app-scroll-button *ngIf="sectionType === 'Home'"></app-scroll-button>
 </div>
 
