--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -30,6 +30,8 @@
     position: relative;
     padding: 0px;
     .section {
-        padding: 20%;
+        margin: 0 auto;
+        position: relative;
+        top: 35vh;
     }
 }
