--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,13 +8,16 @@
       <div class="flex-box"><a class="effect" href="tel:15144754146"><i class="fas fa-mobile-alt"></i> +1-514-475-4146</a></div>
     </div>
     <div class="flex-box-container grid-container-min-1-fr">  
-      <div class="flex-box media-icons effect">
-        <a href="https://www.linkedin.com/in/iliesaithamouda" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-      <div class="flex-box media-icons effect">
-        <a href="https://medium.com/@iliesaithamouda" target="_blank"><i class="fab fa-medium"></i></a>
-      </div>
-      
+      <a href="https://www.linkedin.com/in/iliesaithamouda" target="_blank">
+        <div class="flex-box media-icons effect">
+          <i class="fab fa-linkedin-in"></i>
+        </div>
+      </a>
+      <a href="https://medium.com/@iliesaithamouda" target="_blank">
+        <div class="flex-box media-icons effect">
+          <i class="fab fa-medium"></i>
+        </div>
+      </a>
     
     </div>
 
