--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,12 +1,15 @@
+:host {
+    // override color on hover or normal over anchor
+    
+}
+
 .box-list {
-    // border: 1px solid black;
     display: grid;
     grid-gap: 40px;
     grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
     text-align: left;
     padding: 20px;
     .box {
-        // border: 1px solid #ffe066;
         border-radius: 5px;
         display: flex;
         flex-direction: column;
@@ -37,15 +40,17 @@
             .media-icons {
                 font-size: 20px;
                 border: 1px solid black;
-                width: 24px;
+                width: 19px;
                 text-align: center;
                 padding: 10px;
                 border-radius: 24px;
             }
 
-            .media-icons:hover {
-                background-color: #484848;
-                color: white;
+            a:hover { 
+                .media-icons {
+                    background-color: #484848;
+                    color: #FFF !important;
+                }
             }
         }
 
@@ -57,13 +62,4 @@
         
     }
 }
-
-    a {
-        color: #484848;
-        text-decoration: none;
-    }
-    a:hover {
-        color: #FFF;
-        text-decoration: none;
-    }
   
