--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -44,6 +44,7 @@
                 color: #232323;
                 padding: 8px 16px;
                 font-size: 15px;
+                width: inherit;
                 &.error-input {
                     border: 1px solid#CD5C5C;
                 }
@@ -82,7 +83,7 @@
     .text-area-container {
         & textarea {
             resize: none;
-            width: 100%;
+            width: 96%;
             height: 190px;
             padding: 8px 16px;
             color: #232323;
