--- a/src/app/scroll-top-button/scroll-top-button.component.scss
+++ b/src/app/scroll-top-button/scroll-top-button.component.scss
@@ -1,21 +1,26 @@
+:host {
+    --color-bg: rgb(51, 51, 51);
+    --color-bg-hover: #FFF;
+}
+
 .scroll-top-container {
     display: none;
     position: fixed;
     width: 40px;
     height: 40px;
-    background-color: #000000;
-    border: 2px solid #000000;
+    background-color: var(--color-bg);
+    border: 2px solid var(--color-bg);
     right:25px;
     bottom: 25px;
     font-size: 28px;
     line-height: 38px;
     text-align: center;
     z-index: 5;
-    color: #FFFFFF;
+    color: var(--color-bg-hover);
     cursor: pointer;
     &:hover {
-        background-color: #FFFFFF;
-        color: #000000;
+        background-color: var(--color-bg-hover);
+        color: var(--color-bg);
     }
 }
 
