--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 .bg-color-medium { background-color: rgb(250, 250, 250); }
 .bg-color-light { background-color: rgb(255, 255, 255); }
-body { margin: 0px; font-family: "Lato", sans-serif; color: #484848; box-sizing: border-box;}
+body { 
+	--color-a: #484848;
+	--color-a-hover: rgb(51, 51, 51);
+
+	margin: 0px; font-family: "Lato", sans-serif; color: #484848; box-sizing: border-box;}
 .typed-cursor {
     font-size: 26px;
     color: rgb(191, 191, 191);
@@ -11,6 +15,17 @@ body { margin: 0px; font-family: "Lato", sans-serif; color: #484848; box-sizing:
 	-moz-transition: all .4s ease-in-out;
 	-o-transition: all .4s ease-in-out;
 	transition: all .4s ease-in-out;
+}
+
+
+
+a {
+	color: var(--color-a);
+	text-decoration: none;
+}
+a:hover {
+	color: var(--color-a-hover);
+	text-decoration: none;
 }
 
 
