update to trigger pre-push husky

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,11 @@
 <div class="box-list">
   <div class="box">
     <h3 class="section-subtitle">Hi There! I'm Ilyes Ait Hamouda</h3>
-    <p class="description">I'm a professional developer from Montréal, Canada. I create beautiful professional websites using best practice accessibility. I enjoy turning complex problems into simple, beautiful and intuitive interface designs. </p>
+    <p class="description">
+      I'm a professional developer from Montréal, Canada.
+      I create beautiful professional websites using best practice accessibility.
+      I enjoy turning complex problems into simple, beautiful and intuitive interface designs.
+    </p>
     <div class="flex-box-container">
       <div class="flex-box"><a class="effect" href="mailto:iliesaithamouda@gmail.com"><i class="fas fa-envelope"></i> iliesaithamouda@gmail.com</a></div>
       <div class="flex-box"><a class="effect" href="tel:15144754146"><i class="fas fa-mobile-alt"></i> +1-514-475-4146</a></div>
