--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -33,7 +33,7 @@
             flex-direction: column;
             display: grid;
             grid-gap: 40px;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
             .sub-box {
                 display: flex;
                 flex-direction: column;
