--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div>
-        <button class="send-button" (click)="submitForm()" type="submit">Send Message</button>
+        <button class="button-lg" (click)="submitForm()" type="submit">Send Message</button>
       </div>
     </div>
 </div>
