--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -23,7 +23,7 @@
 }
 
 .background-pic-m {
-    background-image: url('../../assets/background-mountain.jpg');
+    background-image: url('../../assets/background-2.jpg');
     background-position: 50% 0px;
     background-size: cover;
     height: 100vh;
