--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,9 @@
 <header [@animateStickyMenu]="menuState" class="menu-container">
   <nav [@animateColorMenu]="menuState" class="menu-grid-container">
-    <div class="logo-container"><img src="./assets/logo.svg"></div>
+    <div class="logo-container"><img [src]="logoPath"></div>
     <div (click)="toggleMenu = !toggleMenu" class="ham-menu"><i class="fas fa-bars"></i></div>
-    <div class="menu-item-container" *ngFor="let menuItem of menu.items">
-      <span appSmoothScrolling attr.data-target-link="{{menuItem.label}}" class="menu-item" >{{ menuItem.label.toUpperCase() }}</span>
+    <div class="menu-item-container" [ngClass]="{'menu-item-container-selected': menuItem.selected, 'menu-item-fixed': menuState === 'fixed'}" *ngFor="let menuItem of menu.items">
+      <span appSmoothScrolling attr.data-target-link="{{menuItem.label}}" (click)="setMenuItemAsSelected(menuItem)" class="menu-item" >{{ menuItem.label.toUpperCase() }}</span>
     </div>
   </nav>
   <div [@animateColorMenu]="menuState" class="menu-items-mobile" [ngClass]="{'block' : toggleMenu, 'hidden': !toggleMenu}">
