--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="profile-pic-container">
-  <img src="./assets/deadpool.png" alt="profil-picture"/>
+  <img src="./assets/ilies.jpg" alt="profil-picture"/>
 </div>
 <div class="introduction-container">
   <h1>Hi, I'm Ilyes</h1>
