--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,11 @@
 .profile-pic-container {
     img {
         width:170px;
-        border: 3px solid rgb(223, 223, 223);
+        // border: 3px solid rgb(223, 223, 223);
         border-radius: 50%;
+        -webkit-box-shadow: 0px -4px 21px 23px rgba(0,0,0,0.63);
+-moz-box-shadow: 0px -4px 21px 23px rgba(0,0,0,0.63);
+box-shadow: 0px -4px 21px 23px rgba(0,0,0,0.63);
     }
 }
 
