--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,8 +22,12 @@
           <i class="fab fa-medium"></i>
         </div>
       </a>
-    
+      <div class="flex-box justify-right">
+          
+           <a class="btn" href="./assets/iliesAitHamouda_cv.pdf" target="_blank" download="iliesAitHamouda-CV">Download My CV</a>
+      </div>
     </div>
+    
 
   </div>
   <div class="box">
