--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,7 +7,7 @@
       <ng-template ngFor let-item [ngForOf]="data.items" let-i="index" let-c="count">
         <div class="box" *ngIf="layoutType === 'Services'; else work" [ngClass]="{'middle': i === 1 || i === 4}">
           <div class="icon">
-            <i class="fab" [ngClass]="item.imgPath"></i>
+            <i [ngClass]="item.imgPath"></i>
           </div>
           <div class="title">
             <h3>{{ item.title }}</h3>
