--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,7 @@ a:hover {
 	text-decoration: none;
 }
 
-button {
+button, .btn {
 	margin: 0 auto;
 	padding: 8px 20px;
 	font-size: 12px;
@@ -45,7 +45,7 @@ button {
 }
 
 
-*, *:before, *:after {
+*:before, *:after {
 	box-sizing: border-box;
 }
 
