add portfolio section

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -23,6 +23,7 @@
               <div class="overlay-container effect">
                   <div class="border-box">
                       <div class="title">{{ item.title }}</div>
+                      <div class="title">{{ item.description }}</div>
                   </div>
               </div>
             </div>
