--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -60,7 +60,8 @@
         .image-container {
             margin: 10px;
             position: relative;
-
+            width: 300px;
+            height: auto;
             .image {
                 width: 100%;
                 height: 100%;
