--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,6 +1,6 @@
 <div class="posts-container">
   <div class="title-container">
-    <h2>{{data.title}}</h2>
+    <h2>My Posts</h2>
   </div>
   <div *ngIf="response && response.length > 0" class="grid-container">
     <ng-template ngFor let-item [ngForOf]="response" let-i="index" let-c="count">
