add some final effects

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -40,8 +40,8 @@
             please enter a message.
         </div>
       </div>
-      <div>
-        <button class="button-lg" (click)="submitForm()" type="submit">Send Message</button>
+      <div class="button-wrapper">
+        <app-button (clicked)="submitForm()">Send Message</app-button>
       </div>
     </div>
 </div>
