--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -95,6 +95,10 @@
         }
         margin-bottom: 40px;
     }
+    .button-wrapper {
+        width: 200px;
+        margin: 0 auto;
+    }
     
 }
 
