--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,9 +5,9 @@
   <div class="social-media-links">
     <a class="icone" href="https://www.linkedin.com/in/iliesaithamouda" target="_blank"><i class="fab fa-linkedin-in"></i></a>
     <a class="icone" href="https://medium.com/@iliesaithamouda" target="_blank"><i class="fab fa-medium-m"></i></a>
-    
+    <a class="icone" href="https://github.com/iliesaithamouda" target="_blank"><i class="fab fa-github"></i></a>
   </div>
   <div class="copyrights">
-    Ilies ait hamouda © 2018. all right reserved.
+    Ilies ait hamouda © 2019. all right reserved.
   </div>
 </div>
