--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -2,7 +2,7 @@
   <div class="title-container">
     <h2>{{data.title}}</h2>
   </div>
-  <div class="grid-container" [ngClass]="{'grid-container-larger': layoutType === 'Work'}">
+  <div class="grid-container" [ngClass]="{'grid-container-work': layoutType === 'Work'}">
     
       <ng-template ngFor let-item [ngForOf]="data.items" let-i="index" let-c="count">
         <div class="box" *ngIf="layoutType === 'Services'; else work" [ngClass]="{'middle': i === 1 || i === 4}">
@@ -17,20 +17,20 @@
           </div>
         </div>
         <ng-template #work >
-
-            <div class="box" class="image-container">
+            <div class="box image-container">
               <img class="image" [src]="item.imgPath" />
-              <div class="overlay-container effect">
-                  <div class="border-box">
-                      <div class="title">{{ item.title }}</div>
-                      <div class="title">{{ item.description }}</div>
-                  </div>
-              </div>
             </div>
-            
+            <div class="box info-container">
+              <div class="title"><h3>{{ item.title }}</h3></div>
+              <div class="description">{{ item.description }}</div>
+              <div class="button-wrapper"><a href="https://www.wearefrontend.com" target="_blank"><app-button>Visit Website</app-button></a></div>
+            </div>
         </ng-template>
       </ng-template>
     
+  </div>
+  <div *ngIf="layoutType === 'Services'" class="button-wrapper">
+    <a href="./assets/iliesAitHamouda_cv.pdf" target="_blank" download="iliesAitHamouda-CV"><app-button size="lg">Download My CV</app-button></a>
   </div>
 </div>
 
