--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-message></app-message>
 <div class="app">
   <app-menu></app-menu>
   <app-section id="Home" [sectionType]="'Home'" [backgroundColorClass]="'bg-color-light'"></app-section>
