--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -7,7 +7,7 @@
       <div class="box">
         <div class="sub-box">
           <div class="image">
-            <img src="https://miro.medium.com/max/300/{{item.virtuals.previewImage.imageId}}"/>
+            <img src="https://miro.medium.com/max/250/{{item.virtuals.previewImage.imageId}}"/>
           </div>
         </div>
         <div class="sub-box">
@@ -18,7 +18,7 @@
             {{ item.content.subtitle }}
           </div>
           <div class="external-link">
-            <a target='_blank' href="https://medium.com/@iliesaithamouda/{{item.id}}">read more...</a>
+            <a target='_blank' href="https://medium.com/@iliesaithamouda/{{item.id}}"><app-button>read more...</app-button></a>
           </div>
         </div>
       </div>  
