--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -27,6 +27,7 @@
     background-position: 50% 0px;
     background-size: cover;
     height: 100vh;
+    min-height: 530px;
     position: relative;
     padding: 0px;
     .section {
