--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,5 +1,7 @@
 
 .portfolio-container {
+    padding: 0px 10px;
+    
     .title-container {
         color: #333;
         padding-bottom: 40px;
@@ -63,7 +65,6 @@
             height: auto;
             .image {
                 width: 100%;
-                height: 100%;
             }
         }
 
