--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -26,14 +26,14 @@
     .grid-container {
         display: grid;
         grid-gap: 40px;
-        grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         text-align: left;
         padding: 20px;
         .box {
             flex-direction: column;
             display: grid;
             grid-gap: 40px;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+            grid-template-columns: repeat(auto-fit, minmax(200px, 250px));
             .sub-box {
                 display: flex;
                 flex-direction: column;
@@ -63,9 +63,7 @@
             }
 
             .external-link {
-                position: absolute;
-                bottom: 6px;
-                right: 6px;
+                text-align: center;
             }
         }
     }
