--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,4 +1,9 @@
 <div class="quote-container">
+
+  <div class="title-container">
+    <h2>My Favorite Quote</h2>
+  </div>
+
   <div class="quote">
     <blockquote cite="https://en.wikipedia.org/wiki/Jack_of_all_trades,_master_of_none">
         <p>Jack of all trades, master of none, but oftentimes better than master of one</p>
