--- a/src/app/quote/quote.component.scss
+++ b/src/app/quote/quote.component.scss
@@ -1,4 +1,31 @@
 
+.title-container {
+    color: #333;
+    padding-bottom: 40px;
+    & h2 {
+        position: relative;
+        font-weight: 700;
+        line-height: 43px;
+        padding-bottom: 15px;
+        font-size: 36px;
+        margin: 0px;
+        display: inline-block;
+        &::after {
+            content: '';
+            position: absolute;
+            background-color: rgb(68, 68, 68);
+            height: 2px;
+            left: 4px;
+            bottom: 0px;
+            width: 50px;
+            text-align: center;
+        }
+    }
+}
+
+.quote, .embedded-video-cont {
+    padding: 0px 10px;
+}
 
 blockquote {
     margin: 0;
@@ -8,7 +35,7 @@ blockquote p {
     padding: 15px;
     background: #eee;
     border-radius: 5px;
-    font-size: 40px;
+    font-size: 2em;
     font-weight: 900;
 }
 .embedded-video-cont {
